tests/error/array_oob_multi.gw
#! [contains] ArrayOutofBounds
var Object[1][1] i;
i[1][0];
